gitops/dex/certs.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - dex.buc.sh
    secretName: cert-dex-console-buc-sh
  rules:
  - host: dex.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              name: dex

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-http
spec:
  rules:
  - host: dex.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              name: dex
